--- a/frontend/Giaitri.html
+++ b/frontend/Giaitri.html
@@ -114,7 +114,7 @@
         </form>
       </div>
       
-      <a href="dangnhap.html">
+      <a href="profile.html">
           <button aria-label="User account" class="hover:text-black">
             <i class="fas fa-user"></i>
           </button>
@@ -205,14 +205,14 @@
           <!-- Card 1 -->
           <div class="flex justify-center">
             <div class="w-full max-w-[200px] h-[220px] bg-white rounded-lg shadow-lg overflow-hidden">
-              <img src="/Image/Music/music1.jpg" alt="Music" class="w-full h-full object-cover">
+              <img src="Image/music1.jpg" alt="Music" class="w-full h-full object-cover">
             </div>
           </div>
 
           <!-- Card 2 -->
           <div class="flex justify-center">
             <div class="w-full max-w-[200px] h-[220px] bg-white rounded-lg shadow-lg overflow-hidden">
-              <img src="/Image/Music/music2.jpg" alt="Music" class="w-full h-full object-cover">
+              <img src="Image/music2.jpg" alt="Music" class="w-full h-full object-cover">
             </div>
           </div>
 
@@ -221,20 +221,20 @@
             <span class="absolute top-0 left-0 bg-red-500 text-white text-xs font-semibold px-2 py-1 rounded-br-lg z-10">
               Mới ra mắt
             </span>
-            <img src="/Image/Music/music3.jpg" alt="Music" class="w-full h-full object-cover">
+            <img src="Image/music3.jpg" alt="Music" class="w-full h-full object-cover">
           </div>
 
           <!-- Card 4 -->
           <div class="flex justify-center">
             <div class="w-full max-w-[200px] h-[220px] bg-white rounded-lg shadow-lg overflow-hidden">
-              <img src="/Image/Music/music4.jpg" alt="Music" class="w-full h-full object-cover">
+              <img src="Image/music4.jpg" alt="Music" class="w-full h-full object-cover">
             </div>
           </div>
 
           <!-- Card 5 -->
           <div class="flex justify-center">
             <div class="w-full max-w-[200px] h-[220px] bg-white rounded-lg shadow-lg overflow-hidden">
-              <img src="/Image/Music/music5.jpg" alt="Music" class="w-full h-full object-cover">
+              <img src="Image/music5.jpg" alt="Music" class="w-full h-full object-cover">
             </div>
           </div>
         </div>
