--- a/frontend/Hotro.html
+++ b/frontend/Hotro.html
@@ -114,7 +114,7 @@
         </form>
       </div>
       
-      <a href="dangnhap.html">
+      <a href="profile.html">
           <button aria-label="User account" class="hover:text-black">
             <i class="fas fa-user"></i>
           </button>
