--- a/frontend/Main.html
+++ b/frontend/Main.html
@@ -114,7 +114,7 @@
         </form>
       </div>
       
-      <a href="dangnhap.html">
+      <a href="profile.html">
           <button aria-label="User account" class="hover:text-black">
             <i class="fas fa-user"></i>
           </button>
@@ -214,7 +214,7 @@
         </div>
       </a>
       <!-- Thẻ 5 -->
-      <a href="Mac.html#MacBookAir">
+      <a href="Mac.html#MacBookAirList">
         <div class="rounded-2xl bg-blue-100 text-black p-5 h-[430px] flex flex-col justify-between">
           <h3 class="font-extrabold text-xl leading-tight mb-2">Macbook Air</h3>
           <p class="text-sm text-black mb-1">MMM* Mỏng Mà "Mượt"!</p>
