--- a/frontend/TV&Nha.html
+++ b/frontend/TV&Nha.html
@@ -114,7 +114,7 @@
         </form>
       </div>
       
-      <a href="dangnhap.html">
+      <a href="profile.html">
           <button aria-label="User account" class="hover:text-black">
             <i class="fas fa-user"></i>
           </button>
@@ -146,7 +146,7 @@
     <div>
     <div>
     <p align="center">
-      <img src="/Image/iconTV+.jpg" style="border-radius: 13px;" height="100" width="100" alt="iconTV+">
+      <img src="Image/iconTV+.jpg" style="border-radius: 13px;" height="100" width="100" alt="iconTV+">
     </p>
     <br>
     </div>
@@ -169,10 +169,10 @@
     </div>
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-2 gap-6 max-w-4xl mx-auto text-center">
       <div class="flex justify-center">
-        <img src="/Image/PanelNha&Giaitri.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
+        <img src="Image/PanelNha&Giaitri.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
       </div>
       <div class="flex justify-center">
-        <img src="/Image/PanelNha&Giaitri2.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
+        <img src="Image/PanelNha&Giaitri2.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
       </div>
     </div> 
     <br>
@@ -188,16 +188,16 @@
     <br>
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-2 gap-6 max-w-4xl mx-auto text-center">
       <div class="flex justify-center">
-        <img width="700px" height="100px" src="/Image/TVOS18.jpg" style="border-radius: 13px;" alt="Panel Nha & Giải trí">
+        <img width="700px" height="100px" src="Image/TVOS18.jpg" style="border-radius: 13px;" alt="Panel Nha & Giải trí">
       </div>
       <div class="flex justify-center">
-        <img src="/Image/QLed.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
+        <img src="Image/QLed.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
       </div>
       <div class="flex justify-center">
-        <img src="/Image/SamSung.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
+        <img src="Image/SamSung.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
       </div>
       <div class="flex justify-center">
-        <img src="/Image/Máy chiếu.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
+        <img src="Image/Máy chiếu.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
       </div>
     </div>
     <br>
@@ -206,7 +206,7 @@
     <br>
       <div>
       <p align="center">
-        <img src="/Image/iconHome.jpg" style="border-radius: 13px;" height="100" width="100" alt="iconHome">
+        <img src="Image/iconHome.jpg" style="border-radius: 13px;" height="100" width="100" alt="iconHome">
       </p>
       <br>
       </div>
@@ -219,10 +219,10 @@
       <br>
       <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-2 gap-6 max-w-4xl mx-auto text-center">
         <div class="flex justify-center">
-          <img src="/Image/panelHome.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
+          <img src="Image/panelHome.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
         </div>
         <div class="flex justify-center">
-          <img src="/Image/panelHome2.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
+          <img src="  Image/panelHome2.jpg" class="w-full max-w-lg h-auto mx-auto rounded-lg shadow-lg" alt="Panel Nha & Giải trí">
         </div>
       </div>
       <br>
