--- a/frontend/iPad.html
+++ b/frontend/iPad.html
@@ -121,6 +121,7 @@
 
     <!-- Tìm kiếm và đăng nhập -->
     <div class="hidden md:flex items-center space-x-4 text-gray-700 ml-6">
+      <!-- Nút tìm kiếm -->
       <button 
         aria-label="Search" 
         class="hover:text-black" 
@@ -128,9 +129,12 @@
       >
         <i class="fas fa-search"></i>
       </button>
+
+      <!-- Form tìm kiếm -->
       <div id="searchForm" class="hidden mt-4 w-full max-w-sm mx-auto">
-        <form class="flex items-center">
+        <form class="flex items-center" onsubmit="searchProduct(event)">
           <input 
+            id="searchInput"
             type="text" 
             placeholder="Tìm kiếm sản phẩm..." 
             class="w-full px-3 py-2 text-sm text-black focus:outline-none" 
@@ -140,20 +144,63 @@
           </button>
         </form>
       </div>
-      
+
+      <!-- Icon người dùng -->
       <a href="profile.html">
-          <button aria-label="User account" class="hover:text-black">
-            <i class="fas fa-user"></i>
-          </button>
-        </a>
+        <button aria-label="User account" class="hover:text-black">
+          <i class="fas fa-user"></i>
+        </button>
+      </a>
     </div>
-      </div>
+
+    <div id="searchResults" class="mt-2 border p-4 rounded bg-white hidden relative">
+      <button 
+        onclick="closeSearchResults()" 
+        class="absolute top-2 right-2 text-gray-500 hover:text-gray-800 font-bold"
+        aria-label="Đóng kết quả tìm kiếm"
+      >
+        &times;
+      </button>
+      <div id="searchResultsContent" class="flex space-x-4 overflow-x-auto max-w-full"></div>
+    </div>
+
+    <!-- Script toggle -->
     <script>
-    function toggleSearchForm() {
-        const form = document.getElementById('searchForm');
-        form.classList.toggle('hidden');
-    }
-    </script>
+      function toggleSearchForm() {
+          const form = document.getElementById('searchForm');
+          form.classList.toggle('hidden');
+      }
+
+      // Hàm xử lý tìm kiếm sản phẩm
+      function searchProduct(event) {
+        event.preventDefault();
+
+        const query = document.getElementById('searchInput').value;
+        const resultsDiv = document.getElementById('searchResults');
+        const resultsContent = document.getElementById('searchResultsContent');
+
+        resultsDiv.classList.remove('hidden');
+        resultsContent.innerHTML = "Đang tìm kiếm...";
+
+        fetch('../backend/search.php?query=' + encodeURIComponent(query))
+            .then(response => response.text())
+            .then(data => {
+                resultsContent.innerHTML = data;
+            })
+            .catch(error => {
+                resultsContent.innerHTML = "Đã xảy ra lỗi khi tìm kiếm.";
+                console.error("Lỗi:", error);
+            });
+          }
+
+          // Hàm ẩn kết quả tìm kiếm khi bấm nút đóng
+          function closeSearchResults() {
+              const resultsDiv = document.getElementById('searchResults');
+              resultsDiv.classList.add('hidden');
+              // Nếu muốn, xóa nội dung cũ
+              document.getElementById('searchResultsContent').innerHTML = "";
+          }
+      </script>
 </header>
     <main>
         <div style="display: flex; justify-content: center; align-items: center; height: 20vh;">
