--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -16,9 +16,197 @@
     }
     #editModal.active { display: flex; }
     #detailModal.hidden { display: none; }
+    body {
+    font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont,
+        "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
+    }
+    header {
+        position: sticky;
+        top: 0;  /* Đảm bảo header ở trên cùng */
+        background-color:rgba(255, 255, 255, 0.7);  /* Thêm màu nền để dễ nhìn */
+        z-index: 1000;  /* Đảm bảo header hiển thị trên các phần tử khác */
+        width: 100%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  /* Tạo bóng mờ cho header */
+    }
+    /* Overlay modal */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    /* Nội dung modal */
+    .modal-content {
+      background-color: #fff;
+      margin: 5% auto;
+      padding: 30px;
+      border-radius: 20px;
+      width: 60%;
+      position: relative;
+    }
+
+    /* Nút đóng */
+    .modal .close {
+      position: absolute;
+      top: 10px; right: 20px;
+      font-size: 24px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body class="bg-gray-100">
+    <header class="w-full flex justify-center px-4 py-2 text-[20px] text-black/80">
+    <nav>
+      <ul class="flex items-center justify-center flex-wrap gap-4 sm:gap-6 relative">
+        <!-- Logo -->
+        <li>
+          <a class="flex items-center" href="trangchu.html">
+            <img alt="Apple logo black" class="block" height="45" src="Image/logo.webp" width="41" />
+          </a>
+        </li>
+
+        <!-- Các menu chính -->
+        <li><a class="hover:underline" href="Main.html">Cửa Hàng</a></li>
+        <li class="relative group">
+          <a class="hover:underline cursor-pointer" href="Mac.html">Mac</a>
+          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+            <li><a href="Mac.html#MacbookAir" class="block px-4 py-2 hover:bg-gray-100">Macbook Air</a></li>
+            <li><a href="Mac.html#MacbookPro" class="block px-4 py-2 hover:bg-gray-100">Macbook Pro</a></li>
+          </ul> 
+        </li>
+
+        <li class="relative group">
+          <a class="hover:underline cursor-pointer" href="iPad.html">iPad</a>
+          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+            <li><a href="iPad.html#iPadPro" class="block px-4 py-2 hover:bg-gray-100">iPad Pro </a></li>
+            <li><a href="iPad.html#iPadAir" class="block px-4 py-2 hover:bg-gray-100">iPad Air</a></li>
+            <li><a href="iPad.html#iPadMini" class="block px-4 py-2 hover:bg-gray-100">iPad Mini</a></li>
+            <li><a href="iPad.html#iPadGen" class="block px-4 py-2 hover:bg-gray-100">iPad Gen</a></li>
+          </ul> 
+        </li>
+
+        <li class="group relative">
+          <a class="hover:underline cursor-pointer" href="iPhone.html">iPhone</a>
+          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+            <li><a href="iPhone.html#iPhone15" class="block px-4 py-2 hover:bg-gray-100">iPhone 15</a></li>
+            <li><a href="iPhone.html#iPhone14" class="block px-4 py-2 hover:bg-gray-100">iPhone 14</a></li>
+            <li><a href="iPhone.html#iPhone13" class="block px-4 py-2 hover:bg-gray-100">iPhone 13</a></li>
+            <li><a href="iPhone.html#iPhone12" class="block px-4 py-2 hover:bg-gray-100">iPhone 12</a></li>
+            <li><a href="iPhone.html#iPhone11" class="block px-4 py-2 hover:bg-gray-100">iPhone 11</a></li>
+          </ul>
+        </li>
+
+        <li class="group relative">
+          <a class="hover:underline cursor-pointer" href="Watch.html">Watch</a>
+          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+            <li><a href="Watch.html#WatchSeries" class="block px-4 py-2 hover:bg-gray-100">Apple Watch Series</a></li>
+            <li><a href="Watch.html#WatchSE" class="block px-4 py-2 hover:bg-gray-100">Apple Watch SE</a></li>
+            <li><a href="Watch.html#WatchUltra" class="block px-4 py-2 hover:bg-gray-100">Apple Watch Ultra</a></li>
+          </ul>
+        </li>
+
+        <li class="group relative">
+          <a class="hover:underline cursor-pointer" href="AirPods.html">AirPods</a>
+          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+            <li><a href="AirPods.html#AirPods" class="block px-4 py-2 hover:bg-gray-100">AirPods</a></li>
+            <li><a href="AirPods.html#AirPodsPro" class="block px-4 py-2 hover:bg-gray-100">AirPods Pro</a></li>
+            <li><a href="AirPods.html#AirPodsMax" class="block px-4 py-2 hover:bg-gray-100">AirPods Max</a></li>
+          </ul>
+        </li>
+        <li><a class="hover:underline" href="TV&Nha.html">TV &amp; Nhà</a></li>
+        <li><a class="hover:underline" href="Giaitri.html">Giải Trí</a></li>
+        <li><a class="hover:underline" href="Phukien.html">Phụ Kiện</a></li>
+        <li><a class="hover:underline" href="Hotro.html">Hỗ Trợ</a></li>
+      </ul>
+    </nav>
+
+    <!-- Tìm kiếm và đăng nhập -->
+    <div class="hidden md:flex items-center space-x-4 text-gray-700 ml-6">
+      <!-- Nút tìm kiếm -->
+      <button 
+        aria-label="Search" 
+        class="hover:text-black" 
+        onclick="toggleSearchForm()"
+      >
+        <i class="fas fa-search"></i>
+      </button>
+
+      <!-- Form tìm kiếm -->
+      <div id="searchForm" class="hidden mt-4 w-full max-w-sm mx-auto">
+        <form class="flex items-center" onsubmit="searchProduct(event)">
+          <input 
+            id="searchInput"
+            type="text" 
+            placeholder="Tìm kiếm sản phẩm..." 
+            class="w-full px-3 py-2 text-sm text-black focus:outline-none" 
+          />
+          <button type="submit" class="bg-black text-white px-3 py-2 text-sm hover:bg-gray-800">
+            Tìm
+          </button>
+        </form>
+      </div>
+
+      <!-- Icon người dùng -->
+      <a href="profile.html">
+        <button aria-label="User account" class="hover:text-black">
+          <i class="fas fa-user"></i>
+        </button>
+      </a>
+    </div>
+
+    <div id="searchResults" class="mt-2 border p-4 rounded bg-white hidden relative">
+      <button 
+        onclick="closeSearchResults()" 
+        class="absolute top-2 right-2 text-gray-500 hover:text-gray-800 font-bold"
+        aria-label="Đóng kết quả tìm kiếm"
+      >
+        &times;
+      </button>
+      <div id="searchResultsContent" class="flex space-x-4 overflow-x-auto max-w-full"></div>
+    </div>
+
+    <!-- Script toggle -->
+    <script>
+      function toggleSearchForm() {
+          const form = document.getElementById('searchForm');
+          form.classList.toggle('hidden');
+      }
+
+      // Hàm xử lý tìm kiếm sản phẩm
+      function searchProduct(event) {
+        event.preventDefault();
+
+        const query = document.getElementById('searchInput').value;
+        const resultsDiv = document.getElementById('searchResults');
+        const resultsContent = document.getElementById('searchResultsContent');
+
+        resultsDiv.classList.remove('hidden');
+        resultsContent.innerHTML = "Đang tìm kiếm...";
+
+        fetch('../backend/search.php?query=' + encodeURIComponent(query))
+            .then(response => response.text())
+            .then(data => {
+                resultsContent.innerHTML = data;
+            })
+            .catch(error => {
+                resultsContent.innerHTML = "Đã xảy ra lỗi khi tìm kiếm.";
+                console.error("Lỗi:", error);
+            });
+          }
+
+          // Hàm ẩn kết quả tìm kiếm khi bấm nút đóng
+          function closeSearchResults() {
+              const resultsDiv = document.getElementById('searchResults');
+              resultsDiv.classList.add('hidden');
+              // Nếu muốn, xóa nội dung cũ
+              document.getElementById('searchResultsContent').innerHTML = "";
+          }
+      </script>
+  </header>
 
   <div class="max-w-4xl mx-auto mt-10 bg-white shadow-md p-6 rounded-lg">
     <div class="flex items-center space-x-6">
